--- a/WebContent/html/Public/signUp.html
+++ b/WebContent/html/Public/signUp.html
@@ -12,7 +12,7 @@
 
   </head>
 
-  <body class="text-center">
+  <body>
     <form class="form-signin" method="">
       <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
@@ -26,6 +26,7 @@
         </label>
       </div>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
       <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
     </form>
   </body>
