--- a/WebContent/html/Public/signUp.html
+++ b/WebContent/html/Public/signUp.html
@@ -13,19 +13,25 @@
   </head>
 
   <body class="text-center">
-    <form class="form-signin" method="">
+    <form class="form-signin" method="post" action="/signUp">
       <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+
+      <label for="inputFirstname" class="sr-only">First Name</label>
+      <input type="text" name="firstname" id="inputFirstname" class="form-control" placeholder="First Name" required autofocus>
+      <label for="inputLastname" class="sr-only">Last Name</label>
+      <input type="text" name="lastname" id="inputLastname" class="form-control" placeholder="Last Name" required>
       <label for="inputEmail" class="sr-only">Email address</label>
-      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+      <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required>
       <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-      <div class="checkbox mb-3">
-        <label>
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
-      </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
+      
+      <label for="inputMobile" class="sr-only">Mobile Number</label>
+      <input type="tel" pattern="[0-9]{10}" name="mobile" id="inputMobile" class="form-control" placeholder="Mobile Number: 9574621830" required>
+      <label for="inputAddress" class="sr-only"></label>
+      <textarea name="address" id="inputAddress" class="form-control" placeholder="Address" required></textarea>
+      
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
       <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
     </form>
   </body>
