Deletion of product Done

--- a/WebContent/productAdd.html
+++ b/WebContent/productAdd.html
@@ -17,7 +17,9 @@
 <label>Product Price</label>
 <input type="Number" name="ProductPrice"><br>
 <label>Product Image</label>
-<input type="file" name="ProductImage">
+<input type="file" name="ProductImage"><br>
+<label>Product Quantity</label>
+<input type="Number" name="ProductQuantity"><br>
 <input type="submit" value="Add">
 </form>
 </body>
