Product QuantityUpdatae,Seller Delete,Consumer Dele Delete,Pr delete, Product delete

--- a/WebContent/ProductUpdate.html
+++ b/WebContent/ProductUpdate.html
@@ -5,11 +5,12 @@
 <title>Insert title here</title>
 </head>
 <body>
-<form action="DeleteOperations"  method="post">	
+<form action="UpdateOperations"  method="post">	
 <label>Enter The ID</label>
 <input type="text" name="ProductId" ><br>
-<input type="hidden" name="task" value="Deletion of Product">
-<input type="submit" value="Delete">
+<label>Enter The Quantity</label>
+<input type="Number" name="ProductQuantity"><br>
+<input type="submit" value="Update">
 
 </form>
 </body>
