Consumer Part 90 % Done

--- a/WebContent/AddtoCart.html
+++ b/WebContent/AddtoCart.html
@@ -5,12 +5,11 @@
 <title>Insert title here</title>
 </head>
 <body>
-<form action="AdditionOperations" method="post">
+<form action="CartAdd" method="post">
 <label>Customer Name</label>
 <input type="text" name="customername" ><br>
 <label>productid</label>
 <input type="text" name="id">
-<input type="hidden" value="Addition to Cart" name="task">
 <input type="submit" value="Add to Cart">
 </form>
 </body>
