--- a/WebContent/DeleteFromCart.html
+++ b/WebContent/DeleteFromCart.html
@@ -5,13 +5,12 @@
 <title>Insert title here</title>
 </head>
 <body>
-<form action="DeleteOperations" method="post">
+<form action="CartDelete" method="post">
 <label>Customer Name</label>
 <input type="text" name="customername" ><br>
 <label>productid</label>
 <input type="text" name="id">
-<input type="hidden" value="Deletion From Cart" name="task">
-<input type="submit" value="Add to Cart">
+<input type="submit" value="Delete From Cart">
 </form>
 </body>
 </html>
