--- a/WebContent/MerchantDelete.html
+++ b/WebContent/MerchantDelete.html
@@ -5,9 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
-<form action="ProductDelete"  method="post">	
-<label>Enter The ID</label>
-<input type="text" name="ProductId" ><br>
+<form action="MerchantDelete" method="post">
+<label >UserId</label>
+<input type="text" name="UserId"><br>
 <input type="submit" value="Delete">
 </form>
 </body>
