--- a/WebContent/ProductUpdate.html
+++ b/WebContent/ProductUpdate.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<form action="UpdateOperations"  method="post">	
+<form action="ProductUpdate"  method="post">	
 <label>Enter The ID</label>
 <input type="text" name="ProductId" ><br>
 <label>Enter The Quantity</label>
